--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,48 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 django = "^5.1.4"
+black = "^24.10.0"
+flake8 = "^7.1.1"
+mypy = "^1.14.1"
+isort = "^5.13.2"
+psycopg2-binary = "^2.9.10"
+v = "^1"
+python-dotenv = "^1.0.1"
+pillow = "^11.1.0"
+redis = "^5.2.1"
+ipython = "^8.31.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+warn_return_any = true
+check_untyped_defs = true
+disallow_untyped_defs = true
+exclude = 'venv'
+
+[tool.isort]
+profile = "hug"
+src_paths = ["isort", "test"]
+line_length = 119
+
+[tool.black]
+# Максимальная длина строки
+line-length = 119
+# Файлы, которые не нужно форматировать
+exclude = '''
+(
+  /(
+      \.eggs         # Исключить несколько общих каталогов
+    | \.git          # в корне проекта
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | dist
+  )/
+
+)
+'''
