--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["macbook <kriukov@pos-credir.ru>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.13"
@@ -18,6 +19,7 @@ python-dotenv = "^1.0.1"
 pillow = "^11.1.0"
 redis = "^5.2.1"
 ipython = "^8.31.0"
+celery = "^5.4.0"
 
 
 [build-system]
