--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile  # Указываем на Dockerfile для Python
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: gunicorn --bind 0.0.0.0:8000 config.wsgi:application
     volumes:
       - .:/app
     depends_on:
