--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,23 +11,32 @@ http {
         listen 80;
         server_name localhost;
 
-        root /usr/share/nginx/html;  # Убедитесь, что этот путь соответствует файлу index.html
-        index index.html;
+        # root /usr/share/nginx/html;  # Эта строка удалена, так как мы не используем html файл
+        index index.html; # Оставьте это, если у Вас есть index.html, который должен отображаться по умолчанию
 
         location / {
-            proxy_pass http://app:8000;  # Прокси запросы корня к Django
+            proxy_pass http://app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        #Обработка статических файлов. Используем alias для корректного пути внутри контейнера
+        location /static/ {
+            alias /app/static/;
+        }
+
+        location /media/ {
+            alias /app/media/; #  Добавлен блок для обработки медиа файлов.  Убедитесь, что у Вас есть директория /app/media/ внутри контейнера
+        }
+
         location /images/ {
-            root /data;  # Если у Вас есть статические файлы
+            alias /app/media/images/; # Предполагается, что изображения хранятся в /app/media/images/
         }
 
         location /api/ {
-            proxy_pass http://app:8000/api/;  # Прокси запросы к /api к Django
+            proxy_pass http://app:8000/api/;
         }
     }
 }
