--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     command: gunicorn --bind 0.0.0.0:8000 config.wsgi:application
     volumes:
       - .:/app
+      - static_volume:/app/static  # Добавлено для монтирования статических файлов
+      - media_volume:/app/media    # Добавлено для монтирования медиа файлов
     depends_on:
       - db
 
@@ -52,6 +54,10 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/html:/usr/share/nginx/html
+      - static_volume:/app/static  # Добавлено для доступа к статическим файлам
+      - media_volume:/app/media
 
 volumes:
   pg_data:
+  static_volume: # Добавлено для хранения статических файлов
+  media_volume:   # Добавлено для хранения медиа файлов
